<resources>
    <string name="app_name">Facturas</string>
    <string name="issueDateTitle">Por fecha de emisión:</string>
    <string name="sinceTitle">Desde:</string>
    <string name="untilTitle">Hasta:</string>
    <string name="amountTitle">Por importe:</string>
    <string name="minAmount">0</string>
    <string name="maxAmount">62</string>
    <string name="stateTitle">Por estado:</string>
    <string name="paid">Pagadas</string>
    <string name="canceled">Anuladas</string>
    <string name="fixedPayment">Cuota Fija</string>
    <string name="pendingPayment">Pendiente de pago</string>
    <string name="paymentPlan">Plan de Pago</string>
    <string name="applyFilters">Aplicar filtros</string>
    <string name="deleteFilters">Borrar filtros</string>
    <string name="euro">€</string>
    <string name="information">INFORMACIÓN</string>
    <string name="emptyListText">Aquí no hay nada.</string>
    <string name="notImplementedYet">Esta función aún no ha sido implementada</string>
    <string name="dayMonthYear">Dia/Mes/Año</string>
    <string name="SeekBarProgress">31</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="activate_retromock">Activar Retromock</string>
    <string name="menu">Menu</string>
    <string name="androidPracticeSelection">Prácticas Android</string>
    <string name="tiInstalation">Mi instalación</string>
    <string name="tiEnergy">Energía</string>
    <string name="tiDetails">Detalles</string>
    <string name="invoiceTitle">Facturas</string>
    <string name="instalationText">Aquí tienes los datos de tu instalación fotovoltaica en tiempo real.</string>
    <string name="autoconsumeInstalation">Autoconsumo:</string>
    <string name="instalationPercent">92%</string>
    <string name="textEnergy">Estamos trabajando en mejorar la App. Tus paneles solares siguen produciendo, en breve podrás seguir viendo tu producción solar. Sentimos las molestias.</string>
    <string name="rememberUser_loginActivity">Recordar usuario</string>
    <string name="email_signUpActivity">Email</string>
    <string name="pass_SignUpActivity">Contraseña</string>
    <string name="forgottenPass_loginActivity">He olvidado mis datos</string>
    <string name="buttonLogin_loginActivity">Entrar</string>
    <string name="divider_signUpActivity">También puedes</string>
    <string name="registerbuttonText_signUpActivity">Registrarse</string>
    <string name="resetEmail_forgotPasswordActivity">Introduce tu email</string>
    <string name="resetMessage_forgotPasswordActivity">Si has olvidado tu contraseña por el correo perteneciente a tu cuenta y te enviaremos un mensaje para restablecerla.</string>
    <string name="resetPass_forgotPasswordActivity">Restablece tu contraseña:</string>
    <string name="buttonText_forgotPasswordActivity">Volver a inicio de sesión</string>
    <string name="repeatPass_signUpActivity">Repite la contraseña</string>
    <string name="cauTitle_EnergyThirdFragment">CAU (Código Autoconsumo)</string>
    <string name="cauContent_EnergyThirdFragment">ES0021000000001994LJ1FA000</string>
    <string name="requestStatus_EnergyThirdFragment">Estado solicitud alta autoconsumidor</string>
    <string name="requestStatusContent_EnergyThirdFragment">No hemos recibido ninguna solicitud de autoconsumo</string>
    <string name="selfConsumptionTitle_EnergyThirdFragment">Tipo autoconsumo</string>
    <string name="selfConsumptionContent_EnergyThirdFragment">Con excedentes y compensación individual - Consumo</string>
    <string name="surplusCompensationTitle_EnergyThridFragment">Compensación de excedentes</string>
    <string name="surplusCompensationContent_EnergyThirdFragment">Precio PVPC</string>
    <string name="installationPowerContent_EnergyThirdFragment">5kWp</string>
    <string name="webviewText">Desde una aplicación Android, se puede acceder páginas web, mediante el navegador externo o mediante Webviews.</string>
    <string name="open_external_web">Abrir navegador externo</string>
    <string name="openWebView_ActivityWebview">Abrir Webview</string>
    <string name="smart_solar_activity_energy">Smart Solar</string>
    <string name="installationPowerTitle_EnergyThirdFragment">Potencia de instalación</string>
    <string name="buttonText_signUpActivity">Volver a inicio de sesión</string>
    <string name="email_loginActivity">Email</string>
    <string name="pass_loginActivity">Contraseña</string>
    <string name="divider_loginActivity">También puedes</string>
    <string name="buttonRegister_loginActivity">Registrarse</string>
    <string name="emailOrPassDoesNotMatch_FragmentPopUp">Email o contraseña incorrectos.</string>
    <string name="blankFields_FragmentPopUp">Existen campos vacíos.</string>
    <string name="logout_SelectionActivityM">Logout</string>
    <string name="resetPass_ForgotPassActivity">Restablecer contraseña</string>
</resources>