<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".ui.activities.ForgotPassActivity">

    <ImageView
        android:id="@+id/ivForgotIber"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:src="@drawable/ic_logo_iberdrola_cli"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        />

    <Space
        android:id="@+id/spacerToImageView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/ivForgotIber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvResetPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetPass_forgotPasswordActivity"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spacerToImageView"/>

    <EditText
        android:id="@+id/etEmailReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvResetPass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/resetEmail_forgotPasswordActivity"
        />

    <TextView
        android:id="@+id/tvMessageForgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetMessage_forgotPasswordActivity"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/etEmailReset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Space
        android:id="@+id/spacerToTextView"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintTop_toBottomOf="@id/tvMessageForgot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btReturnLogin"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/buttonText_forgotPasswordActivity"
        app:layout_constraintTop_toBottomOf="@id/spacerToTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btResetPass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/resetPass_ForgotPassActivity"
        app:layout_constraintTop_toBottomOf="@id/btReturnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>