<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.EnergyFirstFragment">

    <TextView
        android:id="@+id/tvInstalationHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instalationText"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvInstalationBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/autoconsumeInstalation"
        android:textSize="16sp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvInstalationHead"
        />

    <TextView
        android:id="@+id/tvInstalationPercent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instalationPercent"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toEndOf="@id/tvInstalationBody"
        app:layout_constraintTop_toBottomOf="@id/tvInstalationHead"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:src="@drawable/img"
        app:layout_constraintTop_toBottomOf="@id/tvInstalationBody"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>